--- a/releases/9.6/ru/presskit96.html
+++ b/releases/9.6/ru/presskit96.html
@@ -123,7 +123,7 @@ PostgreSQL и другими базами данных. Например, Postgr
 <p>Web-страницы</p>
 <ul>
 <li><a href="https://www.postgresql.org">Домашняя страница PostgreSQL</a></li>
-<li><a href="http://PostgreSQLRussia.org">#PostgreSQLRussia — сообщество русскоязычных пользователей PostgreSQL</a></li>
+<li><a href="http://RuPostgres.org">#RuPostgres (#PostgreSQLRussia) — сообщество русскоязычных пользователей PostgreSQL</a></li>
 </ul>
 
 <p>Контакты для прессы</p>
@@ -157,11 +157,22 @@ PostgreSQL и другими базами данных. Например, Postgr
 по адресу <a href="https://www.postgresql.org">PostgreSQL.org</a>.</p>
 
 <a name="quoted_companies"></a><h2>Информация о компаниях, упомянутых в цитатах, и полные тексты цитат</h2>
-<p>
-&quot;As the chief database architect for Synthetic Genomics, I was utterly amazed at the power, flexibility and richness of programming interfaces for Postgres 9.5x.  I migrated our entire genomics data platform &mdash; all 25 billion legacy mysql rows of it &mdash; to a single Postgres database, leveraging the row compression abilities of the JSONB datatype, the excellent GIN, BRIN, and B-tree indexing modes, and the beautifully extended PL/pgSQL programming language for stored functions.  Now with version 9.6, I expect to harness the parallel query functionality to allow even greater scalability for queries against our rather large tables.  Postgres 9.5 has proven itself to be utterly stable, remarkably performant, and, in my opinion, the best mixed relational-document store data storage engine on the market at this time,&quot; said Mike Sofen, Chief Database Architect, Synthetic Genomics
-</p>
-<p><a href="https://www.syntheticgenomics.com/">Synthetic Genomics, Inc.</a> (SGI) is a global leader in the fields of synthetic biology and synthetic genomics utilizing foundational intellectual property in these rapidly evolving disciplines to design and build biological systems to solve global sustainability challenges. SGI provides solutions in genomics research, bioproduction, and applied products. The research segment is focused on genomics solutions for academic and commercial research and development organizations. The commercial products and services include instrumentation, reagents, DNA synthesis services, and bioinformatics services and software.  Contact Synthetic Genomics at <a href="mailto:media@syntheticgenomics.com">media@syntheticgenomics.com</a> (English)
-</p>
+<p>«Являясь главным архитектором баз данных в компании Synthetic Genomics, я был поражён, столкнувшись с мощью PostgreSQL 9.5, 
+его гибкостью и богатым набором программных инструментов. Я мигрировал всю нашу платформу для изучения геномов — 
+все 25 миллиардов строк из MySQL — в единую базу данных под управлением Postgres, воспользовавшись такими преимуществами, 
+как сжатие строк с типом данных JSONB и отличными режимами индексирования GIN, BRIN и B-tree. 
+С появлением версии 9.6 я планирую хорошую получить отдачу от параллелизации запросов, получив улучшенное масштабирование 
+для запросов на довольно больших таблицах. Postgres 9.5 показал себя как крайне крайне стабильная, удивительно 
+производительная и, на мой взгляд, лучшая реляционно- и документоориентированная СУБД на рынке на данный момент», —
+говорит Майк Софен (Mike Sofen), главный архитектор компании Synthetic Genomics.</p>
+<p>Компания <a href="https://www.syntheticgenomics.com/">Synthetic Genomics, Inc.</a> (SGI) — глобальный лидер в областях
+синтетической биологии и синтетической геномики, использующая интеллектуальную собственность в этих быстро 
+развивающихся дисциплинах для проектирования и создания биологических систем, призванных решать глобальные задачи
+достижения стабильности. CGI предоставляет решения по исследованию в области геномики, биопроизводства и прикладных продуктов.
+Исследовательский сегмент сфокусирован на решениях в области геномики для академических и коммерческих исследовательских
+организаций и производств. Коммерческие продукты и сервисы включают: инструментарий, реагенты, сервисы синтеза ДНК, 
+биоинформатические сервисы и программное обеспечение. 
+Контакты: <a href="mailto:media@syntheticgenomics.com">media@syntheticgenomics.com</a> (англ.)</p>
 <p>
 &quot;With the capabilities of remote JOIN, UPDATE and DELETE, Foreign Data Wrappers are now a complete solution for sharing data between other databases and PostgreSQL. For example, PostgreSQL can be used to handle data input going to two or more different kinds of databases,&quot; said Julyanto Sutandang, Director of Business Solutions at Equnix.</p>
 <p><a href="">Equnix</a> is an IT Solution Provider for Enterprises delivering comprehensive alternate solutions, based on research, development and Open Source. Equnix is a PostgreSQL Company. Contact us in English or Indonesian at: <a href="mailto:info@equnix.co.id">Info@equnix.co.id</a> or call Johan D. at +6221-22866662.
