--- a/releases/9.6/ru/presskit96.html
+++ b/releases/9.6/ru/presskit96.html
@@ -172,10 +172,16 @@ PostgreSQL и другими базами данных. Например, Postgr
 Исследовательский сегмент сфокусирован на решениях в области геномики для академических и коммерческих исследовательских
 организаций и производств. Коммерческие продукты и сервисы включают: инструментарий, реагенты, сервисы синтеза ДНК, 
 биоинформатические сервисы и программное обеспечение. 
-Контакты: <a href="mailto:media@syntheticgenomics.com">media@syntheticgenomics.com</a> (англ.)</p>
+Email: <a href="mailto:media@syntheticgenomics.com">media@syntheticgenomics.com</a> (англ.)</p>
 <p>
-&quot;With the capabilities of remote JOIN, UPDATE and DELETE, Foreign Data Wrappers are now a complete solution for sharing data between other databases and PostgreSQL. For example, PostgreSQL can be used to handle data input going to two or more different kinds of databases,&quot; said Julyanto Sutandang, Director of Business Solutions at Equnix.</p>
-<p><a href="">Equnix</a> is an IT Solution Provider for Enterprises delivering comprehensive alternate solutions, based on research, development and Open Source. Equnix is a PostgreSQL Company. Contact us in English or Indonesian at: <a href="mailto:info@equnix.co.id">Info@equnix.co.id</a> or call Johan D. at +6221-22866662.
+«Благодаря возможностям удалённого выполнения операций JOIN, UPDATE и DELETE, адаптеры сторонних данных 
+(Foreign Data Wrappers, FDW) теперь представляют собой полноценное решение для распределения данных между PostgreSQL 
+и другими базами данных. Например, PostgreSQL может быть использовать для обработки данных, поступающих в два 
+или более различных типов СУБД» — сказал Джулианто Сутанданг (Julyanto Sutandang), директор по 
+бизнес-решениям в компании Equnix.</p>
+<p>Компания <a href="http://www.equnix.co.id/">Equnix</a> — IT-поставщик для крупного бизнеса, предоставляющий
+решения, основанные исследованиях, разработке и Open Source. Equnix является PostgreSQL-компанией. 
+Email (англ. и индонезийский): <a href="mailto:info@equnix.co.id">Info@equnix.co.id</a>, телефон +6221-22866662.
 </p>
 
 <a name="companies"></a><h2>Корпоративная поддержка</h2>
