--- a/releases/9.6/ru/presskit96.html
+++ b/releases/9.6/ru/presskit96.html
@@ -37,10 +37,10 @@
 ситуации и доступности ядер, параллелизм позволяет достигать вплоть до 32-кратного ускорения запросов при работе с 
 Big Data.</p>
 
-<p>«Я мигрировал всю нашу платформу для изучения геномов — все 25 миллиардов строк из MySQL — в единую базу данных 
+<p>&laquo;Я мигрировал всю нашу платформу для изучения геномов — все 25 миллиардов строк из MySQL — в единую базу данных 
 под управлением Postgres, воспользовавшись такими преимуществами, как сжатие строк с типом данных JSONB и отличными 
 режимами индексирования GIN, BRIN и B-tree. С появлением версии 9.6 я планирую хорошую получить отдачу от 
-параллелизации запросов, получив улучшенное масштабирование для запросов на довольно больших таблицах», — говорит 
+параллелизации запросов, получив улучшенное масштабирование для запросов на довольно больших таблицах&raquo;, — говорит 
 Майк Софен (Mike Sofen), главный архитектор компании Synthetic Genomics.</p>
 
 <b>Горизонтальное масштабирование средствами синхронной репликации и модуля postgres_fdw</b>
@@ -49,26 +49,26 @@ Big Data.</p>
 согласование операций чтения на масштабе всего кластера баз данных. Во-первых, теперь стало возможным конфигурировать 
 группы реплик, работающих с синхронной репликацией. Во-вторых, режим "remote_apply" позволяет получить согласованное 
 представление данных на масштабе нескольких узлов. Всё это работает на основе встроенного механизма репликации и 
-предназначено для получения массива «идентичных» узлов серверов баз данных для балансироваки нагрузки, содержащей 
+предназначено для получения массива &laquo;идентичных&raquo; узлов серверов баз данных для балансироваки нагрузки, содержащей 
 операции чтения.</p>
 
-<p>Драйвер интеграции данных «из PostgreSQL в PostgreSQL» — модуль postgres_fdw – получил новые возможности для 
-осуществления операций на удалённых серверах. За счёт «проталкивания» ("pushing down") операций сортировки, 
+<p>Драйвер интеграции данных &laquo;из PostgreSQL в PostgreSQL&raquo; — модуль postgres_fdw – получил новые возможности для 
+осуществления операций на удалённых серверах. За счёт &laquo;проталкивания&raquo; ("pushing down") операций сортировки, 
 соединений и групповых обновлений пользователи теперь имеют возможность распределения нагрузки между несколькими 
 серверами PostgreSQL. В ближайшее время планируется внедрение данных улучшений и в другие FDW-драйверы.</p>
 
-<p></p>«Благодаря возможностям удалённого выполнения операций JOIN, UPDATE и DELETE, адаптеры сторонних данных 
+<p></p>&laquo;Благодаря возможностям удалённого выполнения операций JOIN, UPDATE и DELETE, адаптеры сторонних данных 
 (Foreign Data Wrappers, FDW) теперь представляют собой полноценное решение для распределения данных между 
 PostgreSQL и другими базами данных. Например, PostgreSQL может быть использовать для обработки данных, 
-поступающих в два или более различных типов СУБД», — сказал Джулианто Сутанданг (Julyanto Sutandang), 
+поступающих в два или более различных типов СУБД&raquo;, — сказал Джулианто Сутанданг (Julyanto Sutandang), 
 директор по бизнес-решениям в компании Equnix.</p>
 
 <b>Улучшенный полнотекстовый поиск по фразам</b>
 
-<p>Система полнотекстового поиска в PostgreSQL теперь поддерживает так называемый «фразовый поиск». 
+<p>Система полнотекстового поиска в PostgreSQL теперь поддерживает так называемый &laquo;фразовый поиск&raquo;. 
 Он позволяет пользователям находить точные совпадения по фразам, а также документы, где слова встречаются 
 на заданном удалении друг от друга, применяя при этом GIN-индексы. Получив также новые возможности тонкой 
-настройки полнотекстового поиска, PostgreSQL становится высококачественной системой «гибридного поиска», 
+настройки полнотекстового поиска, PostgreSQL становится высококачественной системой &laquo;гибридного поиска&raquo;, 
 что подразумевает возможность одновременного использования различных типов данных и операций поиска по ним: 
 реляционного, JSON и полнотекстового.</p>
 
@@ -89,7 +89,7 @@ PostgreSQL и другими базами данных. Например, Postgr
   <li><a href="https://wiki.postgresql.org/wiki/NewIn96">Что нового в PostgreSQL 9.6</a></li>
   <li><a href="/about/featurematrix">Матрица возможностей</a></li>
   <li><a href="https://momjian.us/main/writings/pgsql/features.pdf">Основные возможности (слайды)</a></li>
-  <li><a href="https://www.youtube.com/watch?v=HjAeLE9aNhQ">«Заглянем слону под хобот: 9.6» (видео)</a></li>
+  <li><a href="https://www.youtube.com/watch?v=HjAeLE9aNhQ">&laquo;Заглянем слону под хобот: 9.6&raquo; (видео)</a></li>
   <li><a href="https://www.youtube.com/watch?v=RkkUbQP3G0A">Производительность PostgreSQL 9.6 (видео)</a></li>
 </ul>
 
@@ -157,13 +157,13 @@ PostgreSQL и другими базами данных. Например, Postgr
 по адресу <a href="https://www.postgresql.org">PostgreSQL.org</a>.</p>
 
 <a name="quoted_companies"></a><h2>Информация о компаниях, упомянутых в цитатах, и полные тексты цитат</h2>
-<p>«Являясь главным архитектором баз данных в компании Synthetic Genomics, я был поражён, столкнувшись с мощью PostgreSQL 9.5, 
+<p>&laquo;Являясь главным архитектором баз данных в компании Synthetic Genomics, я был поражён, столкнувшись с мощью PostgreSQL 9.5, 
 его гибкостью и богатым набором программных инструментов. Я мигрировал всю нашу платформу для изучения геномов — 
 все 25 миллиардов строк из MySQL — в единую базу данных под управлением Postgres, воспользовавшись такими преимуществами, 
 как сжатие строк с типом данных JSONB и отличными режимами индексирования GIN, BRIN и B-tree. 
 С появлением версии 9.6 я планирую хорошую получить отдачу от параллелизации запросов, получив улучшенное масштабирование 
 для запросов на довольно больших таблицах. Postgres 9.5 показал себя как крайне крайне стабильная, удивительно 
-производительная и, на мой взгляд, лучшая реляционно- и документоориентированная СУБД на рынке на данный момент», —
+производительная и, на мой взгляд, лучшая реляционно- и документоориентированная СУБД на рынке на данный момент&raquo;, —
 говорит Майк Софен (Mike Sofen), главный архитектор компании Synthetic Genomics.</p>
 <p>Компания <a href="https://www.syntheticgenomics.com/">Synthetic Genomics, Inc.</a> (SGI) — глобальный лидер в областях
 синтетической биологии и синтетической геномики, использующая интеллектуальную собственность в этих быстро 
@@ -174,10 +174,10 @@ PostgreSQL и другими базами данных. Например, Postgr
 биоинформатические сервисы и программное обеспечение. 
 Email: <a href="mailto:media@syntheticgenomics.com">media@syntheticgenomics.com</a> (англ.)</p>
 <p>
-«Благодаря возможностям удалённого выполнения операций JOIN, UPDATE и DELETE, адаптеры сторонних данных 
+&laquo;Благодаря возможностям удалённого выполнения операций JOIN, UPDATE и DELETE, адаптеры сторонних данных 
 (Foreign Data Wrappers, FDW) теперь представляют собой полноценное решение для распределения данных между PostgreSQL 
 и другими базами данных. Например, PostgreSQL может быть использовать для обработки данных, поступающих в два 
-или более различных типов СУБД» — сказал Джулианто Сутанданг (Julyanto Sutandang), директор по 
+или более различных типов СУБД&raquo; — сказал Джулианто Сутанданг (Julyanto Sutandang), директор по 
 бизнес-решениям в компании Equnix.</p>
 <p>Компания <a href="http://www.equnix.co.id/">Equnix</a> — IT-поставщик для крупного бизнеса, предоставляющий
 решения, основанные исследованиях, разработке и Open Source. Equnix является PostgreSQL-компанией. 
